[workspace]
members = [
    "stabilitypool-common",
    "stabilitypool-client",
    "stabilitypool-server",
]
resolver = "2"

[workspace.dependencies]
fedimint-core = { git = "https://github.com/dpc/fedimint", branch = "config-gen-params" }
fedimint-client = { git = "https://github.com/dpc/fedimint", branch = "config-gen-params" }

# fedimint-core = { path = "../fedimint/fedimint-core" }
# fedimint-client = { path = "../fedimint/fedimint-client" }

[patch.crates-io]
secp256k1-zkp = { git = "https://github.com/dpc/rust-secp256k1-zkp/", branch = "sanket-pr" }
