[package]
name = "stabilitypool-common"
version = "0.1.0"
authors = ["The Stability Pool Developers"]
description = "stability pool module for fedimint"
edition = "2021"

[lib]
name = "stabilitypool"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1"
fedimint-core = { git = "https://github.com/fedimint/fedimint", rev = "c06bc2f4eb77596696c127aba0bc502bf73b2e70" }
futures = "0.3.24"
serde = { version = "1.0.149", features = [ "derive" ] }
strum = "0.24"
strum_macros = "0.24"
bitcoin = { version = "0.29.2", features = [ "rand", "serde"] }
tracing ="0.1.37"
secp256k1-zkp = { version = "0.7.0", features = ["serde", "bitcoin_hashes" ] }
time = { version = "0.3", features = ["std", "serde-human-readable"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls-webpki-roots", "socks"] }
serde_json = { version = "1" }
erased-serde = "0.3"

[dev-dependencies]
tokio = "1.23"
rand = "0.8"
proptest = "1.0.0"
lazy_static = "1.4"